# crud_rust

./: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs  main.rs
src/handlers/: crud_handler.rs  mod.rs
src/services/: crud_service.rs  mod.rs
src/structs/: task.rs
src/utils/: db.rs  logger.rs
