[package]
name = "crud_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
fern = "0.7.1"
humantime = "2.1.0"
log = "0.4.22"
rocket = {version = "0.5.1", features=["json"]}
sea-orm = {version = "1.1.3", features=["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
sea-orm-rocket = "0.5.5"
serde = "1.0.217"
serde_json = "1.0.134"
migration = { path = "migration" }